codepkg/objects/FundingOppServiceLocationJunction__c.object
<CustomObject>
    <description>Junction between Funding Opportunity and Service Location.</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Funding_Opportunity__c</fullName>
        <description>Disaster Grant / Funding Opportunity to which this Junction is related.</description>
        <inlineHelpText>Disaster Grant / Funding Opportunity to which this Junction is related.</inlineHelpText>
        <label>Disaster Grant/FO</label>
        <referenceTo>Funding_Opportunity__c</referenceTo>
        <relationshipLabel>Funding Opp Service Location Junctions</relationshipLabel>
        <relationshipName>Funding_Opp_Service_Location_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <description>Service Location to which this Junction is related.</description>
        <inlineHelpText>Service Location to which this Junction is related.</inlineHelpText>
        <label>Service Location</label>
        <referenceTo>ServiceLocation__c</referenceTo>
        <relationshipLabel>Funding Opp Service Location Junctions</relationshipLabel>
        <relationshipName>Funding_Opp_Service_Location_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Funding Opp Service Location Junction</label>
    <nameField>
        <displayFormat>FOSL-{000000}</displayFormat>
        <label>Funding Opp Service Location Junction Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Opp Service Location Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>